#434 and #468 icon pack 4 and styles fix - changed sub menu background - fixed text align in buttons

--- a/WebContent/assets/common.css
+++ b/WebContent/assets/common.css
@@ -25,7 +25,8 @@ img.ptr {
   height: 32px;
   transition: all .3s ease-in-out; }
   img.ptr:hover {
-    background: rgba(96, 125, 139, 0.51); }
+    background: rgba(76, 90, 80, 0.85);
+    border-radius: 5px; }
   img.ptr:focus {
     background-color: red; }
 
@@ -48,7 +49,7 @@ span#__header__alarmLevelText {
 
 #subHeader {
   margin-bottom: 5px;
-  background-color: #4C5A50;
+  background-color: rgba(76, 90, 80, 0.75);
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.33); }
   #subHeader tbody > tr > td:nth-child(2) .copyTitle {
     color: white;
@@ -113,11 +114,14 @@ span#__header__alarmLevelText {
       width: 73%; }
     .borderDiv > table input[type=button], .borderDivPadded > table input[type=button] {
       text-align: center; }
+    .borderDiv > table input[type=submit], .borderDivPadded > table input[type=submit] {
+      width: 30%;
+      text-align: center; }
     .borderDiv > table input[type=checkbox], .borderDivPadded > table input[type=checkbox] {
       width: auto; }
 
 .content {
-  margin-bottom: 30px;
+  margin-bottom: 40px;
   /* flex-direction: column; */ }
   .content > .borderDiv {
     width: 48%;
@@ -164,6 +168,9 @@ input, select, textarea {
   input #watchListSelect, select #watchListSelect, textarea #watchListSelect {
     padding: 0 1rem 5px;
     margin-right: 3rem; }
+
+input[type=button], input[type=submit] {
+  text-align: center; }
 
 .labelDiv {
   box-sizing: border-box;
@@ -316,7 +323,8 @@ span.dojoTreeNodeLabel span {
 #treeDiv span {
   font-family: 'Lato' , sans-serif;
   color: inherit;
-  margin: 0; }
+  margin: 0;
+  margin-right: 10px; }
 
 #imageChartDiv img {
   width: 100%;
