--- a/WebContent/assets/modern_theme/main_theme.scss
+++ b/WebContent/assets/modern_theme/main_theme.scss
@@ -5,7 +5,8 @@
     transition: all .3s ease-in-out;
 
     &:hover {
-        background: rgba(96, 125, 139, 0.51);
+        background: rgba(76,90,80, 0.85);
+        border-radius: 5px;
     }
     
     &:focus {
@@ -78,7 +79,7 @@ span#__header__alarmLevelText {
 
 #subHeader {
     margin-bottom: 5px;
-    background-color: $primary_color_dark;
+    background-color: rgba(76,90,80, 0.75);
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.33);
 
     tbody > tr > td:nth-child(2) {
@@ -166,6 +167,11 @@ span#__header__alarmLevelText {
             text-align: center;
         }
 
+        input[type=submit] {
+            width: 30%;
+            text-align: center;
+        }
+
         input[type=checkbox] {
             width: auto;
         }
@@ -174,7 +180,7 @@ span#__header__alarmLevelText {
 }
 
 .content {
-    margin-bottom: 30px;
+    margin-bottom: 40px;
     // display: flex;
     // flex-wrap: wrap;
     /* flex-direction: column; */
@@ -247,7 +253,11 @@ input, select, textarea {
         padding: 0 1rem 5px;
         margin-right: 3rem;
     }
-    
+
+}
+
+input[type=button], input[type=submit] {
+    text-align: center;
 }
 
 .labelDiv {
