--- a/WebContent/assets/modern_theme/page_watch_list.scss
+++ b/WebContent/assets/modern_theme/page_watch_list.scss
@@ -56,6 +56,8 @@ span.dojoTreeNodeLabel span {
         font-family: 'Lato' , sans-serif;
         color: inherit;
         margin: 0;
+        margin-right: 10px;
+
     }
 
 }
